<resources>
    <string name="app_name">PGL_RGC_Tabs_Fragments</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_seccions">SeccionsActivity</string>
    <string name="section_format">Hello World from this section: %1$d</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_country">CountryActivity</string>
    <string name="title_activity_borra1">Borra1Activity</string>
    <string name="title_activity_borra2">Borra2Activity</string>
    <string name="title_activity_borra3">Borra3Activity</string>
    <string name="title_activity_borra4">Borra4Activity</string>
    <string name="n1">1</string>
    <string name="n2">2</string>
    <string name="n3">3</string>
    <string name="n4">4</string>
    <string name="title_activity_borra5">Borra5Activity</string>


    <string name="Country">Country</string>
    <string name="Id">Id</string>
    <string name="description">Description</string>

    <string name="agreement">Agreement</string>
    <string name="amount">Amount</string>

    <string name="title_activity_profile">Profile Activity</string>
    <string name="Profile">Profile</string>

    <string name="title_activity_employee">Employee Activity</string>
    <string name="identification">Identification</string>
    <string name="name">Name</string>
    <string name="surnames">Surnames</string>
    <string name="home">Home</string>
    <string name="employee_accounts">Employee Accounts</string>
    <string name="personal_amount">Personal Amount</string>

    <string name="title_activity_roster">Roster Activity</string>
    <string name="calculation_date">Calculation Date</string>
    <string name="period">Period</string>
    <string name="ordering_account">Ordering Account</string>
    <string name="title_activity_agreement">Agreement Activity</string>
    <string name="employee">Employee</string>
    <string name="title_activity_payroll">Payroll Activity</string>
    <string name="payroll">Payroll</string>
    <string name="title_activity_pictures_and_texts">PicturesAndTextsActivity</string>
    <string name="stones">Stones</string>
    <string name="stone_a">Stone A</string>
    <string name="stone_b">Stone B</string>
    <string name="miscelanea">Miscelanea</string>
    <string name="show">Show</string>

    <string name="error_field_required">Field required</string>
    <string name="error_value_invalid">Value incorrect</string>
    <string name="title_activity_ok">OkActivity</string>
    <string name="data_procesed">Data procesed sucefully</string>
    <string name="Stones" />
    <string name="title_activity_hide">HideActivity</string>
    <string name="run">Run</string>
    <string name="click_on_next_to_continue">Click on next to continue</string>
    <string name="go">Go!</string>

    <string name="launcher_country">Country</string>
    <string name="launcher_agreement">Agreement</string>
    <string name="launcher_profile">Profile</string>
    <string name="launcher_employee">Employee</string>
    <string name="title_activity_act__w_">Act_W_Activity</string>
    <string name="title_activity_act__wo_">Act_WO_Activity</string>
    <string name="title_activity_bridge">BridgeActivity</string>
    <string name="title_activity_edit_country">EditCountryActivity</string>


</resources>
