<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".ProfileActivity"
    tools:showIn="@layout/activity_profile">

    <android.support.design.widget.TextInputLayout
        android:id="@+id/TextInputLayoutId"
        android:layout_width="345dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/TextInputEditTextId"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/Id"
            android:inputType="number" />
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/TextInputLayoutDescription"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        app:layout_constraintEnd_toEndOf="@+id/TextInputLayoutId"
        app:layout_constraintStart_toStartOf="@+id/TextInputLayoutId"
        app:layout_constraintTop_toBottomOf="@+id/TextInputLayoutId">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/TextInputEditTextDescription"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/description"
            android:inputType="text" />
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/TextInputLayoutAgreement"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        app:layout_constraintEnd_toEndOf="@+id/TextInputLayoutDescription"
        app:layout_constraintStart_toStartOf="@+id/TextInputLayoutDescription"
        app:layout_constraintTop_toBottomOf="@+id/TextInputLayoutDescription">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/TextInputEditTextAgreement"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/agreement"
            android:inputType="number" />
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/TextInputLayoutAmount"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        app:layout_constraintEnd_toEndOf="@+id/TextInputLayoutAgreement"
        app:layout_constraintStart_toStartOf="@+id/TextInputLayoutAgreement"
        app:layout_constraintTop_toBottomOf="@+id/TextInputLayoutAgreement">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/TextInputEditTextAmount"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/amount"
            android:inputType="numberDecimal" />
    </android.support.design.widget.TextInputLayout>
</android.support.constraint.ConstraintLayout>